feat: add github webhook integration [T-203]
